# shader_preloading

./: .gitignore  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
core/: CMakeLists.txt
core/include/: vk_core.h
core/src/: vk_core.c
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  rust_vulkan_lib.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/components/: ProductCard.ets  ProductList.ets
entry/src/main/ets/pages/: Index.ets  Product.ets
entry/src/main/resources/base/profile/: main_pages.json
reports/Hardly lag/: Hardly lag.html  Hardly lag.md
rust_vulkan/: Cargo.toml  build.rs
rust_vulkan/.cargo/: config.toml
rust_vulkan/shaders/: fragment_shader.frag
rust_vulkan/src/: lib.rs
rust_vulkan/src/libs/: mod.rs  utils.rs  vulkan_application.rs
rust_vulkan/tests/: general_test.rs  test.rs  test_lib.rs
vulkan_library/: .gitignore  CMakeLists.txt  main.cpp
vulkan_library/include/: application.h  config.h
vulkan_library/include/utils/: command_context.h  pipelines.h  queues.h  render_pass.h  swap_chain.h  sync_objects.h  utils.h
vulkan_library/include/utils/shaders/: fragment_shader.h  vertex_shader.h
vulkan_library/shaders/: compile.bat
vulkan_library/shaders/codes/: shader.vert
vulkan_library/src/: application.cpp
vulkan_library/src/utils/: command_context.cpp  pipelines.cpp  queues.cpp  render_pass.cpp  swap_chain.cpp  sync_objects.cpp
